deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cvspawner
  labels:
    app.kubernetes.io/name: cvspawner
    app.kubernetes.io/managed-by: argocd
