deploy/base/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvspawner-app
  namespace: cvspawner
  labels:
    app.kubernetes.io/name: cvspawner
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cvspawner
    app.kubernetes.io/component: app
